# pyquant

./: .gitignore  README.md  pyproject.toml
configs/: baostock_download.yaml  datasets.yaml
docs/superpowers/specs/: 2026-07-15-dataset-centric-data-layer-design.md  2026-07-16-notebook-download-progress-pool-design.md  2026-07-17-baostock-fields-configuration-design.md  2026-07-17-notebook-download-progress-design.md
src/pyquant/: __init__.py  _data_migration.py  _data_update.py  backtest.py  baostock_source.py  cli.py  data.py  io.py  metrics.py  transforms.py  universe.py
strategies/: 红利低波.md
strategies/cross_sectional/dividend_low_vol/: components.py  config.yaml  download.ipynb  run.ipynb
strategies/dividend_low_vol/: components.py  config.yaml  download.ipynb  run.ipynb  strategy_1_monthly_rebalance.ipynb
tests/: test_backtest.py  test_baostock_source.py  test_cli.py  test_data.py  test_data_update.py  test_dividend_low_vol_components.py  test_io.py  test_metrics.py  test_transforms.py  test_universe.py
