[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquant"
version = "0.1.0"
description = "Lightweight research toolkit for reproducing quantitative strategy reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "baostock",
    "pyarrow",
    "pyyaml",
    "matplotlib",
    "scipy",
    "statsmodels",
    "empyrical-reloaded",
]

[project.optional-dependencies]
test = ["pytest"]
notebook = [
    "jupyterlab",
    "ipykernel",
]
backtest = ["vectorbt"]
report = ["quantstats"]
factor = ["alphalens-reloaded"]

[project.scripts]
pyquant = "pyquant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
